Removed @ in twitter_username

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_username: AmanKabra
 
 # Email and twitter are optional:
 email: azk6189@psu.edu
-twitter_username: @AmanKabra_Now
+twitter_username: AmanKabra_Now
 
 # Set this to true to get LaTeX math equation support
 use_math: true
